--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "gitupload": "gitanoaddfiles bin/javadoc.cli.js  docs/README.* package* README.md  src/javadoc.js  test/* test/examples/* && gitanopush",
-    "test": "node test/javadoc.spec.js",
+    "test": "node_modules/.bin/rimraf coverage .nyc_output && node_modules/.bin/nyc --reporter=html node test/javadoc.spec.js",
     "docs": "node bin/javadoc.cli.js -i \"docs/README.ini.md\" \"bin/javadoc.cli.js\" \"src/javadoc.js\" \"docs/README.end.md\" -f markdown -o README.md"
   },
   "author": "",
@@ -21,7 +21,8 @@
   "devDependencies": {
     "assertivity": "^1.0.3",
     "execute-command-sync": "^1.0.2",
-    "nyc": "^11.7.1"
+    "nyc": "^11.7.1",
+    "rimraf": "^2.6.2"
   },
   "directories": {
     "doc": "docs",
