--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "javadoc",
   "version": "2.0.0",
-  "description": "Documentation from javadoc comments: using glob patterns, for any language, with any tags, to JSON or Markdown format, from CLI or API.",
+  "description": "Unopinionated, simple and powerful documentation generator.",
   "bin": {
     "javadoc": "bin/javadoc"
   },
